<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <description>
        Pure Java implementation NFSv3, v4 and v4.1
  </description>

  <groupId>org.dcache</groupId>
  <artifactId>nfs4j</artifactId>
  <version>0.15.1-SNAPSHOT</version>
  <name>Java based NFSv4.1 implementation</name>
  <packaging>pom</packaging>

  <url>http://www.dCache.ORG</url>

  <scm>
      <connection>scm:git:https://github.com/dCache/nfs4j.git</connection>
      <developerConnection>scm:git:ssh://git@github.com/dCache/nfs4j.git</developerConnection>
    <tag>0.15</tag>
  </scm>

  <!--
    CODE LICENSE
  -->
  <licenses>
    <license>
      <name>
        GNU Lesser General Public License
      </name>
      <url>
        http://www.fsf.org/licensing/licenses/lgpl.txt
      </url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <modules>
      <module>core</module>
      <module>basic-client</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.0.2</version>
            <configuration>
                <source>1.8</source>
                <target>1.8</target>
                <showDeprecation>true</showDeprecation>
                <encoding>UTF-8</encoding>
            </configuration>
        </plugin>
	<plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-release-plugin</artifactId>
	    <version>2.4.2</version>
	    <dependencies>
		<dependency>
		    <groupId>org.apache.maven.scm</groupId>
		    <artifactId>maven-scm-provider-gitexe</artifactId>
		    <version>1.9</version>
		</dependency>
	    </dependencies>
	</plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>findbugs-maven-plugin</artifactId>
           <version>3.0.0</version>
        </plugin>
    </plugins>
  </build>

  <!--
    EXTERNAL DEPENDENCIES
  -->
  <dependencyManagement>
      <dependencies>
          <dependency>
              <groupId>jline</groupId>
              <artifactId>jline</artifactId>
              <version>2.12.1</version>
          </dependency>
          <dependency>
              <groupId>junit</groupId>
              <artifactId>junit</artifactId>
              <version>4.11</version>
              <scope>test</scope>
          </dependency>
          <dependency>
              <groupId>org.mockito</groupId>
              <artifactId>mockito-core</artifactId>
              <version>1.9.5</version>
              <scope>test</scope>
          </dependency>
          <dependency>
              <groupId>org.slf4j</groupId>
              <artifactId>slf4j-api</artifactId>
              <version>1.7.10</version>
          </dependency>
          <dependency>
              <groupId>org.slf4j</groupId>
              <artifactId>log4j-over-slf4j</artifactId>
              <version>1.7.10</version>
          </dependency>
          <dependency>
              <groupId>ch.qos.logback</groupId>
              <artifactId>logback-classic</artifactId>
              <version>1.0.13</version>
          </dependency>
          <dependency>
              <groupId>com.google.guava</groupId>
              <artifactId>guava</artifactId>
              <version>20.0</version>
          </dependency>
          <dependency>
              <groupId>org.dcache</groupId>
              <artifactId>oncrpc4j-core</artifactId>
              <version>2.7.0</version>
          </dependency>
      </dependencies>
  </dependencyManagement>

  <!--
    MAVEN REPOSITORIES
  -->
  <repositories>
  <!-- Grizzly repository -->
    <repository>
      <id>download.java.net</id>
      <name>Glassfish Repository for Maven</name>
      <url>http://download.java.net/maven/glassfish/ </url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>maven2-repository.dev.java.net</id>
      <name>Java.net Repository for Maven</name>
      <url>http://download.java.net/maven/2/</url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>maven2-repository.dcache.org</id>
      <name>dCache.ORG Repository for Maven</name>
      <url>http://download.dcache.org/nexus/content/groups/public/</url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>dcache-snapshots</id>
      <name>dCache.ORG snapshots repository</name>
      <url>http://download.dcache.org/nexus/content/repositories/snapshots</url>
      <layout>default</layout>
    </repository>
  </repositories>

    <!--
                 MAVEN DEPLOYMENT REPOSITORY
    -->
  <distributionManagement>
      <repository>
          <id>dcache.org</id>
          <url>https://download.dcache.org/nexus/content/repositories/releases</url>
      </repository>
      <snapshotRepository>
          <id>dcache.org-snapshot</id>
          <url>https://download.dcache.org/nexus/content/repositories/snapshots</url>
      </snapshotRepository>
  </distributionManagement>

</project>
